--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@mat-datetimepicker/core": "^12.0.0",
+    "@mat-datetimepicker/moment": "^12.0.0",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
+    "luxon": "^3.4.3",
+    "ngx-material-timepicker": "^13.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
